--- a/BXBook/BXBook/Info.plist
+++ b/BXBook/BXBook/Info.plist
@@ -14,7 +14,7 @@
 		<string>LOGO.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.cnubx.BCBookDw</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,7 +22,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
